...
    val icon: androidx.compose.ui.graphics.vector.ImageVector,
) {
    object Welcome : Screen(AppDestination.WELCOME.routePattern, "Welcome", Icons.Default.Sensors)

    object IdentityUnlock : Screen(AppDestination.IDENTITY_UNLOCK.routePattern, "Restore Identity", Icons.Default.Sensors)

    object Chats : Screen(AppDestination.CHATS.routePattern, "Chats", Icons.Default.Chat)

    object Announces : Screen("announce_stream", "Announces", Icons.Default.Sensors)

    object Contacts : Screen(AppDestination.CONTACTS.routePattern, "Contacts", Icons.Default.People)

    object Map : Screen(AppDestination.MAP.routePattern, "Map", Icons.Default.Map)

    object Identity : Screen(AppDestination.IDENTITY.routePattern, "Network Status", Icons.Default.Info)

    object Settings : Screen(AppDestination.SETTINGS.routePattern, "Settings", Icons.Default.Settings)
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun ColumbaNavigation(
    pendingNavigation: MutableState<PendingNavigation?>,
...
